fix: clipping image

--- a/src/index.scss
+++ b/src/index.scss
@@ -161,6 +161,10 @@ main {
 					font-size: 1.5rem;
 				}
 			}
+
+			#stats {
+				max-width: 100%;
+			}
 		}
 
 		footer {
